Training with better lr and logging

--- a/nn/data_loader.ipynb
+++ b/nn/data_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -21,7 +21,9 @@
     "import matplotlib.pyplot as plt\n",
     "from tqdm.notebook import tqdm\n",
     "from copy import deepcopy \n",
-    "from torch.utils.data import Dataset, DataLoader, random_split"
+    "from tabulate import tabulate\n",
+    "from torch.utils.data import Dataset, DataLoader, random_split\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, precision_score"
    ]
   },
   {
@@ -46,6 +48,8 @@
     "SAMPLE_ZIP = \"lichess_elite_2021-11.zip\"\n",
     "SAMPLE_PGN = \"lichess_elite_2021-11.pgn\"\n",
     "SAMPLE_BITBOARD = \"elite_bitboard.csv\"\n",
+    "BITBOARD_1M = \"1M.csv\"\n",
+    "BITBOARD_10M = \"10M.csv\"\n",
     "ELITE_DATA_SAMPLE_URL = ELITE_DATA_BASE_URL + SAMPLE_ZIP\n",
     "SAMPLE_ZIP_FILE = ARCHIVE_DIR + SAMPLE_ZIP\n",
     "SAMPLE_PGN_FILE  = DATA_DIR + SAMPLE_PGN\n",
@@ -56,6 +60,8 @@
     "STOCKFISH_AVX512_EXE = STOCKFISH_DIR + STOCKFISH_AVX512\n",
     "\n",
     "SAMPLE_BITBOARD_FILE = BITBOARD_DIR + SAMPLE_BITBOARD\n",
+    "BITBOARD_10M_FILE = BITBOARD_DIR + BITBOARD_10M\n",
+    "BITBOARD_1M_FILE = BITBOARD_DIR + BITBOARD_1M\n",
     "\n",
     "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')"
    ]
@@ -90,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "id": "13d423b5aec85db4",
    "metadata": {
     "ExecuteTime": {
@@ -107,8 +113,7 @@
     "        self.neurons = neurons\n",
     "        self.model = nn.Sequential(\n",
     "            nn.Linear(768, neurons),\n",
-    "            # nn.ReLU(),\n",
-    "            # nn.Linear(1024, neurons),\n",
+    "            # nn.Dropout(p=0.5),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(neurons, 1)\n",
     "        )\n",
@@ -119,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "id": "87ecc2ce56ba7086",
    "metadata": {
     "ExecuteTime": {
@@ -146,10 +151,12 @@
     "    def __init__(self, train_file, validate_file):\n",
     "        self.train_dataset, self.validate_dataset = BitboardDrawDataset(train_file), BitboardDrawDataset(validate_file)\n",
     "        self.train_dataloader = DataLoader(self.train_dataset, batch_size=32, shuffle=True, pin_memory=True, pin_memory_device=device.type)\n",
-    "        self.validate_dataloader = DataLoader(self.validate_dataset, batch_size=32, shuffle=True, pin_memory=True, pin_memory_device=device.type)\n",
+    "        self.validate_train_dataloader = DataLoader(self.train_dataset, batch_size=len(self.train_dataset), shuffle=True, pin_memory=True, pin_memory_device=device.type)\n",
+    "        self.validate_test_dataloader = DataLoader(self.validate_dataset, batch_size=len(self.validate_dataset), shuffle=True, pin_memory=True, pin_memory_device=device.type)\n",
     "        self.loss_fn = nn.BCEWithLogitsLoss()\n",
     "        self.total_batches = len(self.train_dataloader)\n",
     "        self.print_every = 100\n",
+    "        self.epoch_print_interval = 1\n",
     "        \n",
     "    def train_one_epoch(self, model, optimizer, p=False) -> int:\n",
     "        running_loss = 0.\n",
@@ -186,46 +193,59 @@
     "        best_acc = 0\n",
     "    \n",
     "        for epoch in range(1, epochs + 1):\n",
-    "            if p and epoch % 10 == 0 or epoch == 1: print(f'EPOCH {epoch}')\n",
+    "            if p and epoch % self.epoch_print_interval == 0 or epoch == 1: print(f'EPOCH {epoch}')\n",
     "        \n",
     "            # Make sure gradient tracking is on, and do a pass over the data\n",
     "            model.train(True)\n",
     "            avg_loss = self.train_one_epoch(model, optimizer)\n",
     "        \n",
-    "            running_vloss = 0.0\n",
     "            model.eval()\n",
     "        \n",
     "            with torch.no_grad():\n",
-    "                acc = 0\n",
-    "                for i, vdata in enumerate(self.validate_dataloader):\n",
+    "                acc_train, acc_test = 0, 0\n",
+    "                loss_train, loss_test = 0, 0\n",
+    "                prec_train, prec_test = 0, 0\n",
+    "    \n",
+    "                for i, vdata in enumerate(self.validate_test_dataloader):\n",
     "                    vinputs, vlabels = vdata\n",
     "                    vinputs, vlabels = vinputs.to(device), vlabels.unsqueeze(1).to(device)\n",
     "                    voutputs = model(vinputs)\n",
-    "                    pred = nn.functional.sigmoid(voutputs)\n",
-    "                    acc += (pred.round() == vlabels).sum()\n",
-    "                    vloss = self.loss_fn(voutputs, vlabels)\n",
-    "                    running_vloss += vloss\n",
+    "                    pred = nn.functional.sigmoid(voutputs).round()\n",
+    "                    acc_test = (pred == vlabels).sum()\n",
+    "                    loss_test = self.loss_fn(voutputs, vlabels)\n",
+    "                    prec_test = precision_score(vlabels.to('cpu'), pred.to('cpu'))\n",
     "                    \n",
-    "            acc = (acc / len(self.validate_dataset)) * 100\n",
-    "            avg_vloss = running_vloss / (i + 1)\n",
-    "            if p and epoch % 10 == 0 or epoch == 1: print(f\"LOSS train {avg_loss} valid {avg_vloss}\")\n",
-    "            if p and epoch % 10 == 0 or epoch == 1: print(f\"ACC {acc:.2f}%\")\n",
+    "                for i, vdata in enumerate(self.validate_train_dataloader):\n",
+    "                    vinputs, vlabels = vdata\n",
+    "                    vinputs, vlabels = vinputs.to(device), vlabels.unsqueeze(1).to(device)\n",
+    "                    voutputs = model(vinputs)\n",
+    "                    pred = nn.functional.sigmoid(voutputs).round()\n",
+    "                    acc_train = (pred == vlabels).sum()\n",
+    "                    loss_train = self.loss_fn(voutputs, vlabels)\n",
+    "                    prec_train = precision_score(vlabels.to('cpu'), pred.to('cpu'))\n",
+    "                    \n",
+    "            acc_train = (acc_train / len(self.train_dataset)) * 100\n",
+    "            acc_test = (acc_test / len(self.validate_dataset)) * 100\n",
+    "            \n",
+    "            if p and epoch % self.epoch_print_interval == 0 or epoch == 1: \n",
+    "                print(tabulate([[\"Loss\", loss_train, loss_test], [\"Precision\", prec_train, prec_test], [\"Accuracy\", f\"{acc_train:.2f}%\", f\"{acc_test:.2f}%\"]],\n",
+    "                               headers=[\"\", \"Train\", \"Test\"]))\n",
     "        \n",
-    "            if avg_vloss < best_vloss:\n",
-    "                best_vloss = avg_vloss\n",
+    "            if loss_test < best_vloss:\n",
+    "                best_vloss = loss_test\n",
     "                best_model = deepcopy(model.state_dict())\n",
     "                best_epoch = epoch\n",
-    "                best_acc = acc\n",
+    "                best_acc = acc_test\n",
     "                \n",
     "        return best_model, best_epoch, best_acc\n",
     "    \n",
     "                \n",
     "    def save_model(self, state_dict, neurons, epoch, lr, momentum, acc):\n",
-    "        model_path = f\"models/model_{neurons}_{epoch}_{lr}_{momentum}_{acc:.2f}\"\n",
+    "        model_path = f\"models/1M/model_{neurons}_{epoch}_{lr}_{momentum}_{acc:.2f}\"\n",
     "        torch.save(state_dict, model_path)\n",
     "        \n",
     "    \n",
-    "    def find_best_neuron(self, neurons, epochs, lr=0.1, momentum=0.9):\n",
+    "    def find_best_neuron(self, neurons, epochs, lr=1e-3, momentum=0.9):\n",
     "        for n in neurons:\n",
     "            print(f\"Model {n}\")\n",
     "            model = SimpleModel(n)\n",
@@ -239,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "id": "e9194572-f607-4a49-8c13-36fdeb3713b8",
    "metadata": {},
    "outputs": [],
@@ -249,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "id": "b28464852583617f",
    "metadata": {
     "ExecuteTime": {
@@ -264,45 +284,132 @@
      "text": [
       "Model 64\n",
       "EPOCH 1\n",
-      "LOSS train 0.4685576379299164 valid 0.6932885050773621\n",
-      "ACC 63.48%\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.6050282120704651  0.585800290107727\n",
+      "Precision  0.6474086197490453  0.6944186046511628\n",
+      "Accuracy   69.07%              71.58%\n",
+      "EPOCH 2\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5949164628982544  0.5806962847709656\n",
+      "Precision  0.6332768201940284  0.6848409748038001\n",
+      "Accuracy   69.33%              72.17%\n",
+      "EPOCH 3\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5873903036117554  0.5789374113082886\n",
+      "Precision  0.6504616920389319  0.6909797151488994\n",
+      "Accuracy   69.70%              72.07%\n",
+      "EPOCH 4\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5806217193603516  0.5788106322288513\n",
+      "Precision  0.6533384534152546  0.6842762063227953\n",
+      "Accuracy   70.06%              72.08%\n",
+      "EPOCH 5\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.574211835861206   0.5782367587089539\n",
+      "Precision  0.6437806115695186  0.6666666666666666\n",
+      "Accuracy   70.18%              71.91%\n",
+      "EPOCH 6\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5670353174209595  0.5773654580116272\n",
+      "Precision  0.6769761167182972  0.6967741935483871\n",
+      "Accuracy   70.75%              72.37%\n",
+      "EPOCH 7\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5595077872276306  0.57655930519104\n",
+      "Precision  0.6613692460918893  0.6772466539196941\n",
+      "Accuracy   71.12%              72.49%\n",
+      "EPOCH 8\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5526480078697205  0.5766419768333435\n",
+      "Precision  0.7058039376538146  0.7061152661680599\n",
+      "Accuracy   71.69%              72.59%\n",
+      "EPOCH 9\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5442324876785278  0.5775585770606995\n",
+      "Precision  0.6987735153080045  0.6890587288817377\n",
+      "Accuracy   72.29%              72.62%\n",
       "EPOCH 10\n",
-      "LOSS train 0.20692882359027862 valid 1.139052391052246\n",
-      "ACC 68.10%\n",
-      "Took: 40.99s\n",
-      "\n",
-      "Model 128\n",
-      "EPOCH 1\n",
-      "LOSS train 0.4641104423999786 valid 0.6862139105796814\n",
-      "ACC 69.49%\n",
-      "EPOCH 10\n",
-      "LOSS train 0.21122819185256958 valid 1.2591369152069092\n",
-      "ACC 64.29%\n",
-      "Took: 41.16s\n",
-      "\n",
-      "Model 256\n",
-      "EPOCH 1\n",
-      "LOSS train 0.4777806317806244 valid 0.6399534940719604\n",
-      "ACC 68.13%\n",
-      "EPOCH 10\n",
-      "LOSS train 0.2249453032016754 valid 1.2374744415283203\n",
-      "ACC 66.56%\n",
-      "Took: 41.69s\n",
-      "\n",
-      "Model 512\n",
-      "EPOCH 1\n",
-      "LOSS train 0.5071118545532226 valid 0.6290889978408813\n",
-      "ACC 67.34%\n",
-      "EPOCH 10\n",
-      "LOSS train 0.2071860134601593 valid 1.2180514335632324\n",
-      "ACC 65.79%\n",
-      "Took: 43.48s\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5371267199516296  0.5788483023643494\n",
+      "Precision  0.7205427279219233  0.6885798567214496\n",
+      "Accuracy   72.93%              72.17%\n",
+      "EPOCH 11\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5283819437026978  0.5812489986419678\n",
+      "Precision  0.6955172413793104  0.662589928057554\n",
+      "Accuracy   73.87%              72.26%\n",
+      "EPOCH 12\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5217918753623962  0.5828592777252197\n",
+      "Precision  0.7483644859813084  0.6904355251921435\n",
+      "Accuracy   74.30%              72.14%\n",
+      "EPOCH 13\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5111703872680664  0.5821585059165955\n",
+      "Precision  0.7199317276692585  0.6546685673556665\n",
+      "Accuracy   75.26%              71.90%\n",
+      "EPOCH 14\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.5029940009117126  0.5849454402923584\n",
+      "Precision  0.7162870318613751  0.6376085504342017\n",
+      "Accuracy   76.05%              71.46%\n",
+      "EPOCH 15\n",
+      "           Train                Test\n",
+      "---------  -------------------  ------------------\n",
+      "Loss       0.49807170033454895  0.5921755433082581\n",
+      "Precision  0.7729845028730629   0.6617147707979627\n",
+      "Accuracy   76.21%               70.84%\n",
+      "EPOCH 16\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.4853879511356354  0.5912159085273743\n",
+      "Precision  0.7405854742197857  0.6345160179125043\n",
+      "Accuracy   77.10%              71.03%\n",
+      "EPOCH 17\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.4779910743236542  0.5932642221450806\n",
+      "Precision  0.7312255562493838  0.6199297349089747\n",
+      "Accuracy   77.74%              70.73%\n",
+      "EPOCH 18\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.4699892997741699  0.5996808409690857\n",
+      "Precision  0.769775767853778   0.6317729450792481\n",
+      "Accuracy   77.98%              70.37%\n",
+      "EPOCH 19\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.4601040482521057  0.5983901619911194\n",
+      "Precision  0.7515523758099352  0.6234104988588197\n",
+      "Accuracy   78.57%              70.79%\n",
+      "EPOCH 20\n",
+      "           Train               Test\n",
+      "---------  ------------------  ------------------\n",
+      "Loss       0.4529713988304138  0.6031404733657837\n",
+      "Precision  0.7493068919403764  0.6150706436420722\n",
+      "Accuracy   78.95%              70.55%\n",
+      "Took: 80.61s\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "pipe.find_best_neuron([64, 128, 256, 512], 10)"
+    "pipe.find_best_neuron([64], 20)"
    ]
   },
   {
@@ -337,8 +444,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, precision_score\n",
-    "\n",
     "validate_dataset = BitboardDrawDataset(\"data/bitboards/100k_0-1441.csv\")\n",
     "validate_dataloader = DataLoader(validate_dataset, batch_size=len(validate_dataset))\n",
     "\n",
@@ -564,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
