--- a/nn/generate_data.ipynb
+++ b/nn/generate_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "1ef9941165adf2c4",
    "metadata": {
     "ExecuteTime": {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "id": "10d38c578b38814",
    "metadata": {
     "ExecuteTime": {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "4b50830b334892a9",
    "metadata": {
     "ExecuteTime": {
@@ -97,19 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "d197a5c0-5c50-4a47-a588-e59d70674952",
    "metadata": {},
    "outputs": [],
    "source": [
     "![ ! -f $LICHESS_EVAL_DB ] && wget \"https://database.lichess.org/lichess_db_eval.jsonl.zst\" -P $ARCHIVE_DIR\n",
     "![ ! -f $LICHESS_EVAL_JSONL ] && unzstd -c $LICHESS_EVAL_DB >> $LICHESS_EVAL_JSONL\n",
-    "#!sed -i 's/\"line\":\"[^\"]*\"/\"line\":\"\"/g' $LICHESS_EVAL_JSONL # remove not needed lines"
+    "!sed -i 's/\"line\":\"[^\"]*\"/\"line\":\"\"/g' $LICHESS_EVAL_JSONL # remove not needed lines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "63ca2cd8226ab9f0",
    "metadata": {
     "ExecuteTime": {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "4a92cda6044d7d19",
    "metadata": {
     "ExecuteTime": {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "id": "da3aef17-0ff7-4d17-9e9f-1717d8dda222",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9cbaf2b930ae4729be233f48b7131e33",
+       "model_id": "434ec0b81e6541acaf31c37aec73823a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -618,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
