Add new models and weights

--- a/nn/generate_data.ipynb
+++ b/nn/generate_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1ef9941165adf2c4",
    "metadata": {
     "ExecuteTime": {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "10d38c578b38814",
    "metadata": {
     "ExecuteTime": {
@@ -66,6 +66,7 @@
     "### URLs\n",
     "\n",
     "ELITE_DATABASE_URL  = \"https://database.nikonoel.fr/lichess_elite_2021-11.zip\"\n",
+    "EVAL_DATABASE_URL   = \"https://database.lichess.org/lichess_db_eval.jsonl.zst\"\n",
     "STOCKFISH_DOWNSTREAM = \"https://github.com/official-stockfish/Stockfish/releases/latest/download/\"\n",
     "STOCKFISH_AVX512_URL = STOCKFISH_DOWNSTREAM + STOCKFISH_AVX512_TAR\n",
     "\n",
@@ -79,13 +80,13 @@
     "ELITE_DATASET_FILENAME = \"lichess_elite_2021-11.pgn\"\n",
     "\n",
     "\n",
-    "LICHESS_EVAL_ARCHIVE = ARCHIVE_DIR + \"lichess_db_eval.jsonl.zst\"\n",
-    "LICHESS_EVAL_FILENAME = DATA_DIR + \"lichess_db_eval.jsonl\"\n"
+    "LICHESS_EVAL_ARCHIVE = \"lichess_db_eval.jsonl.zst\"\n",
+    "LICHESS_EVAL_FILENAME = \"lichess_db_eval.jsonl\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "3778bf5c-efeb-4f40-9ece-6792f62abbea",
    "metadata": {},
    "outputs": [],
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "4b50830b334892a9",
    "metadata": {
     "ExecuteTime": {
@@ -107,7 +108,35 @@
      "start_time": "2024-05-01T10:39:53.660807Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2024-07-23 22:15:11--  https://github.com/official-stockfish/Stockfish/releases/latest/download/stockfish-ubuntu-x86-64-avx512.tar\n",
+      "Loaded CA certificate '/etc/ssl/certs/ca-certificates.crt'\n",
+      "Resolving github.com (github.com)... 140.82.121.3\n",
+      "Connecting to github.com (github.com)|140.82.121.3|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://github.com/official-stockfish/Stockfish/releases/download/sf_16.1/stockfish-ubuntu-x86-64-avx512.tar [following]\n",
+      "--2024-07-23 22:15:11--  https://github.com/official-stockfish/Stockfish/releases/download/sf_16.1/stockfish-ubuntu-x86-64-avx512.tar\n",
+      "Reusing existing connection to github.com:443.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/20976138/a1684ee0-7dc3-4e9d-95f8-d25a2e7857cb?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20240723%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240723T201511Z&X-Amz-Expires=300&X-Amz-Signature=375f0375123898d13441e7e47abbf6f8efc698cae8ad8c4e9dfc79452a366605&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=20976138&response-content-disposition=attachment%3B%20filename%3Dstockfish-ubuntu-x86-64-avx512.tar&response-content-type=application%2Foctet-stream [following]\n",
+      "--2024-07-23 22:15:11--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/20976138/a1684ee0-7dc3-4e9d-95f8-d25a2e7857cb?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20240723%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240723T201511Z&X-Amz-Expires=300&X-Amz-Signature=375f0375123898d13441e7e47abbf6f8efc698cae8ad8c4e9dfc79452a366605&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=20976138&response-content-disposition=attachment%3B%20filename%3Dstockfish-ubuntu-x86-64-avx512.tar&response-content-type=application%2Foctet-stream\n",
+      "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
+      "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 70287360 (67M) [application/octet-stream]\n",
+      "Saving to: ‘stockfish-ubuntu-x86-64-avx512.tar’\n",
+      "\n",
+      "stockfish-ubuntu-x8 100%[===================>]  67,03M  3,12MB/s    in 22s     \n",
+      "\n",
+      "2024-07-23 22:15:34 (3,11 MB/s) - ‘stockfish-ubuntu-x86-64-avx512.tar’ saved [70287360/70287360]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "![ ! -f $STOCKFISH_AVX512_TAR ] && wget $STOCKFISH_AVX512_URL\n",
     "![ ! -f $STOCKFISH_AVX512_EXE ] && tar -xf $STOCKFISH_AVX512_TAR"
@@ -115,17 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d197a5c0-5c50-4a47-a588-e59d70674952",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!sed -i 's/\"line\":\"[^\"]*\"/\"line\":\"\"/g' $LICHESS_EVAL_JSONL # remove not needed lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "03f3d440-3153-4afd-a63e-bff7933ec80d",
    "metadata": {},
    "outputs": [],
@@ -161,11 +180,11 @@
     "        if len(os.listdir(self.root_path)) > 1:\n",
     "            print(\"The archive was already unpacked.\")\n",
     "            return\n",
-    "            \n",
+    "\n",
     "        if ext == \".zst\":\n",
-    "            !unzstd -c $archive_path >> $self.root_path\n",
+    "            !unzstd {archive_path} --output-dir-flat {self.root_path}\n",
     "        elif ext == \".zip\":\n",
-    "            !unzip $archive_path -d $self.root_path\n",
+    "            !unzip {archive_path} -d {self.root_path}\n",
     "        else:\n",
     "            print(\"Unknown compression.\")\n",
     "\n",
@@ -174,7 +193,7 @@
     "            print(\"Archive already downloaded.\")\n",
     "            return\n",
     "\n",
-    "        !wget $ELITE_DATA_SAMPLE_URL -P $ARCHIVE_DIR\n",
+    "        !wget {url} -P {ARCHIVE_DIR}\n",
     "\n",
     "    def get_bitboard_path(self, i):\n",
     "        files = os.listdir(self.bitboards_path)\n",
@@ -193,13 +212,12 @@
     "        files = os.listdir(self.root_path)\n",
     "\n",
     "        file = list(filter(lambda x: not os.path.isdir(self.root_path + x), files))     \n",
-    "        return self.root_path + file[0]\n",
-    "        "
+    "        return self.root_path + file[0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "id": "61bd8f21-f6ad-4cd5-9cf8-f2b2ca29d611",
    "metadata": {},
    "outputs": [],
@@ -210,7 +228,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
+   "id": "2f1e12e7-bb2b-4688-bf01-8dde6a017106",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create necessary data \n",
+    "# eval_dataset_tool.prepare_dataset(EVAL_DATABASE_URL, LICHESS_EVAL_ARCHIVE)\n",
+    "# In this instance a lot of data can be discarded like the pvs lines\n",
+    "# !sed -i 's/\"line\":\"[^\"]*\"/\"line\":\"\"/g' {eval_dataset_tool.dataset_file_name()} # remove not needed lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "63ca2cd8226ab9f0",
    "metadata": {
     "ExecuteTime": {
@@ -270,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "id": "4a92cda6044d7d19",
    "metadata": {
     "ExecuteTime": {
@@ -280,14 +313,16 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'elite_dataset_tool' is not defined",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data/elite_dataset/'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 86\u001b[0m\n\u001b[1;32m     83\u001b[0m                 result\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mint\u001b[39m(game\u001b[38;5;241m.\u001b[39mboard()\u001b[38;5;241m.\u001b[39mpieces(piece, side)))\n\u001b[1;32m     84\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mtuple\u001b[39m(result)\n\u001b[0;32m---> 86\u001b[0m data_generator \u001b[38;5;241m=\u001b[39m DataGenerator(\u001b[43melite_dataset_tool\u001b[49m, STOCKFISH_AVX512_EXE, skip\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m7000\u001b[39m, pos_limit\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10000\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'elite_dataset_tool' is not defined"
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[50], line 86\u001b[0m\n\u001b[1;32m     83\u001b[0m                 result\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mint\u001b[39m(game\u001b[38;5;241m.\u001b[39mboard()\u001b[38;5;241m.\u001b[39mpieces(piece, side)))\n\u001b[1;32m     84\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mtuple\u001b[39m(result)\n\u001b[0;32m---> 86\u001b[0m data_generator \u001b[38;5;241m=\u001b[39m \u001b[43mDataGenerator\u001b[49m\u001b[43m(\u001b[49m\u001b[43melite_dataset_tool\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSTOCKFISH_AVX512_EXE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mskip\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m7000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpos_limit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10000\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[50], line 4\u001b[0m, in \u001b[0;36mDataGenerator.__init__\u001b[0;34m(self, dataset_tool, engine_path, pos_limit, skip, avoid_repetitions)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, dataset_tool : DatasetTool, engine_path : \u001b[38;5;28mstr\u001b[39m, pos_limit : \u001b[38;5;28mint\u001b[39m, skip : \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, avoid_repetitions : \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[0;32m----> 4\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpgn_file \u001b[38;5;241m=\u001b[39m \u001b[43mdataset_tool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset_file_name\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpos_limit \u001b[38;5;241m=\u001b[39m pos_limit\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mskip \u001b[38;5;241m=\u001b[39m skip\n",
+      "Cell \u001b[0;32mIn[42], line 61\u001b[0m, in \u001b[0;36mDatasetTool.dataset_file_name\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdataset_file_name\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 61\u001b[0m     files \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mroot_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     63\u001b[0m     file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misdir(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroot_path \u001b[38;5;241m+\u001b[39m x), files))     \n\u001b[1;32m     64\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroot_path \u001b[38;5;241m+\u001b[39m file[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/elite_dataset/'"
      ]
     }
    ],
@@ -382,83 +417,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "e0372b43-ec81-4f0d-aa61-7001c512792e",
+   "execution_count": 53,
+   "id": "cce0df75-06b9-4eb9-bfca-587a854ff301",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = pd.read_json(\"data/eval_dataset/lichess_db_eval.jsonl\", lines=True, chunksize=100000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "cce0df75-06b9-4eb9-bfca-587a854ff301",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a434efdeacd84e43984e7f8a802428f6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Positions:   0%|          | 0/14000000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "def extract_pvs(evals):\n",
-    "    for pvs in evals:\n",
-    "        if 19 <= pvs['depth'] <= 24:\n",
-    "            return pvs['pvs'], pvs['depth']\n",
-    "    return None, None\n",
+    "# def extract_pvs(evals):\n",
+    "#     for pvs in evals:\n",
+    "#         if 19 <= pvs['depth'] <= 24:\n",
+    "#             return pvs['pvs'], pvs['depth']\n",
+    "#     return None, None\n",
     "\n",
-    "stat = [0 for i in range(1000)]\n",
-    "total = 0\n",
-    "with tqdm(total=14000000, position=0, leave=True, desc=\"Positions\") as pbar:\n",
-    "    for chunk in reader:\n",
-    "        ch_size = len(chunk)\n",
-    "        for i in range(ch_size):\n",
-    "            total += 1\n",
-    "            game_info = chunk.iloc[i]\n",
-    "            evals = game_info['evals']\n",
-    "            pvs, depth = extract_pvs(evals)\n",
-    "            if pvs == None: continue\n",
+    "# reader = pd.read_json(\"data/eval_dataset/lichess_db_eval.jsonl\", lines=True, chunksize=100000)\n",
+    "# stat = [0 for i in range(1000)]\n",
+    "# total = 0\n",
+    "# with tqdm(total=14000000, position=0, leave=True, desc=\"Positions\") as pbar:\n",
+    "#     for chunk in reader:\n",
+    "#         ch_size = len(chunk)\n",
+    "#         for i in range(ch_size):\n",
+    "#             total += 1\n",
+    "#             game_info = chunk.iloc[i]\n",
+    "#             evals = game_info['evals']\n",
+    "#             pvs, depth = extract_pvs(evals)\n",
+    "#             if pvs == None: continue\n",
     "        \n",
-    "            stat[len(pvs)] += 1\n",
+    "#             stat[len(pvs)] += 1\n",
     "                \n",
-    "        pbar.update(ch_size)\n"
+    "#         pbar.update(ch_size)\n",
+    "# print(total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "e4293e19-01fc-420e-acac-21ae1f50ad10",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13123860"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "total"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "da3aef17-0ff7-4d17-9e9f-1717d8dda222",
    "metadata": {},
    "outputs": [],
@@ -574,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "70746bc1-b53b-4861-9b45-743ebdc75107",
    "metadata": {},
    "outputs": [
@@ -590,7 +581,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "774308d8bf934a499251db1f27ea31fe",
+       "model_id": "a2bd6825ec424ed18edb4b79a5b0a42b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -606,7 +597,7 @@
      "output_type": "stream",
      "text": [
       "Done\n",
-      "Read 13123859 positions total\n",
+      "Read 13869526 positions total\n",
       "Written 6882157 positions\n"
      ]
     }
@@ -672,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "id": "5dc666fc-61f1-4020-b5dc-7231530f6aa3",
    "metadata": {},
    "outputs": [
@@ -688,7 +679,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5b853856da743aaa30d1236009c119d",
+       "model_id": "0f89f9233a054908870b292d884a197e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -704,7 +695,7 @@
      "output_type": "stream",
      "text": [
       "Done\n",
-      "Read 1509579 positions total\n",
+      "Read 1965254 positions total\n",
       "Written 1000000 positions\n"
      ]
     }
@@ -716,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "id": "549a842c-4b70-49f7-ace4-78b1f503086d",
    "metadata": {},
    "outputs": [
@@ -732,7 +723,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86dc53b2a30540e49837a12d19ef21f6",
+       "model_id": "5cc5edaeef1440df96fb68e9fd0b6caa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -748,7 +739,7 @@
      "output_type": "stream",
      "text": [
       "Done\n",
-      "Read 136485 positions total\n",
+      "Read 190105 positions total\n",
       "Written 100000 positions\n"
      ]
     }
@@ -760,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 56,
    "id": "bf0034e3-0b4c-4263-bdca-333766de1011",
    "metadata": {},
    "outputs": [
@@ -776,7 +767,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e3f61dd072549a39122e62583f8db44",
+       "model_id": "ac9145ba85354cb1968f538c16abf4a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -792,7 +783,7 @@
      "output_type": "stream",
      "text": [
       "Done\n",
-      "Read 161371 positions total\n",
+      "Read 207150 positions total\n",
       "Written 100000 positions\n"
      ]
     }
@@ -804,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 57,
    "id": "29aad7ae-d0c9-4b3b-b322-bed83145c830",
    "metadata": {},
    "outputs": [
@@ -820,7 +811,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1930b4af3ec48428c1e92a6e911edaa",
+       "model_id": "569af5a03c8e480c876167abd551995b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -836,7 +827,7 @@
      "output_type": "stream",
      "text": [
       "Done\n",
-      "Read 371302 positions total\n",
+      "Read 514419 positions total\n",
       "Written 250000 positions\n"
      ]
     }
@@ -848,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 58,
    "id": "78ef845e-8c34-4530-aafa-b26bc1dad0d0",
    "metadata": {},
    "outputs": [
@@ -864,7 +855,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fe2fc809d3443ff9fbd0dd558a143fe",
+       "model_id": "969dc3a9a25d4a93b34373fe65d6d709",
        "version_major": 2,
        "version_minor": 0
       },
@@ -880,7 +871,7 @@
      "output_type": "stream",
      "text": [
       "Done\n",
-      "Read 342432 positions total\n",
+      "Read 485300 positions total\n",
       "Written 250000 positions\n"
      ]
     }
@@ -1394,7 +1385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
